# git-sql

./: .gitignore  .travis.yml  LICENSE  README.md  git-sql.cabal
src/Data/Schema/Sql/: ScriptParse.hs  SqlFetch.hs  Types.hs
src/GitSqlSync/: Types.hs
test/: MainTestSuite.hs
test/Data/Schema/Sql/: ScriptParseTest.hs  SqlFetchTest.hs  TypeInstances.hs
