name:           git-sql
version:        0.1
cabal-version:  >=1.10
build-type:     Simple
author:         proegssilb@gmail.com

library
    Exposed-modules:    Data.Schema.Sql.ScriptParse, 
                        Data.Schema.Sql.SqlFetch, 
                        Data.Schema.Sql.Types
    build-depends:      base,
                        parsec,
                        HDBC,
                        HDBC-postgresql
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite git-sql-tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            MainTestSuite.hs
    default-language:   Haskell2010
    build-depends:      base,
                        git-sql,
                        QuickCheck,
                        HUnit,
                        tasty,
                        tasty-quickcheck,
                        tasty-hunit,
                        tasty-th

executable test-git-sql
    hs-source-dirs:     test
    ghc-options:        -Wall
    main-is:            MainTestSuite.hs
    other-modules:      Data.Schema.Sql.ScriptParseTest,
                        Data.Schema.Sql.SqlFetchTest,
                        Data.Schema.Sql.TypeInstances
    default-language:   Haskell2010
    build-depends:      base,
                        git-sql,
                        QuickCheck,
                        HUnit,
                        tasty,
                        tasty-quickcheck,
                        tasty-hunit,
                        tasty-th